tests/invalid/generic_instantiate_non_concrete.wio
@Export
@Instantiate(T)
fn Echo<T>(value: T) -> T {
    return value;
}
